syntax = "proto3";

package org.e2eelab.lib.protobuf;

import "e2ee_address.proto";

message supply_opks_request_payload {
  uint32 opks_num = 1;
  e2ee_address user_address = 2;
}